--- a/index.html
+++ b/index.html
@@ -5,378 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voice Controlled Maze - HMI Präsentation</title>
+
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Fira+Code:wght@400;500&display=swap"
         rel="stylesheet">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
-    <style>
-        :root {
-            --bg-color: #0a0f1d;
-            --accent: #00e1ff;
-            --accent-hover: #00b8d4;
-            --text: #e2e8f0;
-            --text-muted: #94a3b8;
-            --glass-bg: rgba(20, 25, 40, 0.75);
-            --glass-border: rgba(255, 255, 255, 0.08);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: var(--bg-color);
-            background-image:
-                radial-gradient(circle at 10% 20%, rgba(0, 225, 255, 0.1) 0%, transparent 40%),
-                radial-gradient(circle at 90% 80%, rgba(139, 92, 246, 0.1) 0%, transparent 40%);
-            color: var(--text);
-            font-family: 'Inter', sans-serif;
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            perspective: 1000px;
-        }
-
-        .presentation-container {
-            width: 95%;
-            max-width: 1600px;
-            height: 90vh;
-            position: relative;
-        }
-
-        /* --- SLIDES --- */
-        .slide {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: grid;
-            grid-template-columns: 1fr 1.5fr;
-            gap: 2rem;
-            padding: 2.5rem;
-            background: var(--glass-bg);
-            border-radius: 24px;
-            box-shadow:
-                0 20px 50px -10px rgba(0, 0, 0, 0.5),
-                inset 0 0 20px rgba(255, 255, 255, 0.02);
-            backdrop-filter: blur(16px) saturate(120%);
-            border: 1px solid var(--glass-border);
-
-            /* Animaciones */
-            opacity: 0;
-            visibility: hidden;
-            transform: translateY(40px) scale(0.96) rotateX(4deg);
-            pointer-events: none;
-            transition: all 0.7s cubic-bezier(0.2, 0.8, 0.2, 1);
-        }
-
-        .slide.active {
-            opacity: 1;
-            visibility: visible;
-            transform: translateY(0) scale(1) rotateX(0deg);
-            z-index: 10;
-            pointer-events: auto;
-            transition-delay: 0.1s;
-        }
-
-        .slide.full-content {
-            grid-template-columns: 1fr;
-            text-align: center;
-            align-content: center;
-        }
-
-        .slide.split-content {
-            grid-template-columns: 1fr 1fr;
-            text-align: left;
-        }
-
-        /* --- TEXT CONTENT --- */
-        .content-panel {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            overflow-y: auto;
-            padding-right: 10px;
-            /* Evita que el scroll tape texto */
-        }
-
-        h1 {
-            font-size: 2.2rem;
-            font-weight: 700;
-            color: var(--accent);
-            margin-bottom: 1.5rem;
-            line-height: 1.1;
-            text-shadow: 0 0 20px rgba(0, 225, 255, 0.3);
-        }
-
-        h2 {
-            font-size: 1.2rem;
-            color: var(--text);
-            margin-bottom: 0.8rem;
-            font-weight: 600;
-            border-bottom: 1px solid var(--glass-border);
-            padding-bottom: 0.5rem;
-        }
-
-        p,
-        li {
-            font-size: 1rem;
-            line-height: 1.6;
-            color: var(--text-muted);
-            margin-bottom: 1rem;
-        }
-
-        ul {
-            list-style-position: inside;
-            margin-bottom: 1rem;
-        }
-
-        strong {
-            color: var(--text);
-            font-weight: 600;
-        }
-
-        .authors {
-            margin-top: 2rem;
-            padding-top: 1rem;
-            border-top: 1px solid var(--glass-border);
-            font-size: 0.9rem;
-            color: var(--text-muted);
-        }
-
-        /* --- VISUAL PANELS (Code & QR) --- */
-        .visual-panel {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
-
-        .code-panel {
-            background: #121212;
-            border-radius: 16px;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.6), 0 10px 30px rgba(0, 0, 0, 0.3);
-            border: 1px solid #2a2a2a;
-            width: 100%;
-            height: 100%;
-        }
-
-        .code-header {
-            background: #1a1a1a;
-            padding: 10px 15px;
-            display: flex;
-            gap: 8px;
-            border-bottom: 1px solid #2a2a2a;
-            align-items: center;
-            flex-shrink: 0;
-        }
-
-        .dot {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-        }
-
-        .red {
-            background: #ff5f56;
-        }
-
-        .yellow {
-            background: #ffbd2e;
-        }
-
-        .green {
-            background: #27c93f;
-        }
-
-        pre {
-            margin: 0 !important;
-            height: 100%;
-            overflow: auto !important;
-            padding: 1.5rem !important;
-            font-family: 'Fira Code', monospace !important;
-            font-size: 0.9rem;
-            line-height: 1.5 !important;
-        }
-
-        /* QR Panels */
-        .qr-panel {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            background: rgba(255, 255, 255, 0.03);
-            padding: 30px;
-            border-radius: 20px;
-            border: 1px solid var(--glass-border);
-        }
-
-        .qr-img {
-            width: 220px;
-            height: 220px;
-            border-radius: 12px;
-            border: 8px solid white;
-        }
-
-        /* --- BUTTONS --- */
-        .btn-primary {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            background: var(--accent);
-            color: #000;
-            padding: 12px 25px;
-            border-radius: 12px;
-            font-weight: 700;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            box-shadow: 0 0 20px rgba(0, 225, 255, 0.4);
-            border: none;
-            cursor: pointer;
-            font-size: 1rem;
-            margin-top: 15px;
-        }
-
-        .btn-primary:hover {
-            background: #fff;
-            transform: translateY(-3px);
-            box-shadow: 0 0 30px rgba(0, 225, 255, 0.6);
-        }
-
-        /* --- CONTROLS & COUNTER --- */
-        .controls {
-            position: absolute;
-            bottom: 30px;
-            right: 40px;
-            display: flex;
-            gap: 20px;
-            z-index: 20;
-        }
-
-        .nav-btn {
-            background: transparent;
-            border: 2px solid var(--accent);
-            padding: 10px 24px;
-            border-radius: 12px;
-            color: var(--accent);
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .nav-btn:hover {
-            background: var(--accent);
-            color: var(--bg-color);
-        }
-
-        .slide-counter {
-            position: absolute;
-            bottom: 45px;
-            left: 50px;
-            z-index: 30;
-            font-family: 'Fira Code', monospace;
-            color: var(--accent);
-            background: rgba(0, 0, 0, 0.7);
-            padding: 8px 16px;
-            border-radius: 20px;
-            border: 1px solid rgba(0, 225, 255, 0.2);
-            opacity: 0;
-            transform: translateY(10px);
-            transition: opacity 0.3s ease, transform 0.3s ease;
-            pointer-events: none;
-        }
-
-        .slide-counter.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* Scrollbar styling */
-        ::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: #334155;
-            border-radius: 10px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: var(--accent);
-        }
-
-        /* Responsive Fixes */
-        @media (max-width: 900px) {
-            .slide {
-                grid-template-columns: 1fr;
-                grid-template-rows: auto 1fr;
-                padding: 1.5rem;
-                overflow-y: auto;
-                /* Permitir scroll en la slide entera */
-            }
-
-            .slide.split-content {
-                grid-template-columns: 1fr;
-            }
-
-            h1 {
-                font-size: 1.6rem;
-            }
-
-            /* Ajuste crítico para el código en móviles */
-            .visual-panel {
-                min-height: 50vh;
-                /* Altura mínima para ver código */
-                margin-bottom: 80px;
-                /* Espacio para controles */
-                align-items: flex-start;
-                /* Alinear arriba */
-            }
-
-            .code-panel {
-                height: 100%;
-                max-height: 60vh;
-                /* Limitar altura máxima */
-            }
-
-            pre {
-                font-size: 0.9rem !important;
-                /* Fuente legible */
-                line-height: 1.6 !important;
-                /* Más espacio entre líneas */
-                padding: 1rem !important;
-            }
-
-            .controls {
-                bottom: 15px;
-                right: 20px;
-            }
-
-            .slide-counter {
-                bottom: 20px;
-                left: 20px;
-            }
-
-            .nav-btn {
-                padding: 8px 16px;
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -399,7 +36,7 @@
                 <div class="qr-panel">
                     <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://lenis-jf.github.io/voice-maze-presentation/"
                         class="qr-img" alt="Präsentation QR">
-                    <p style="color:var(--text-muted); font-size:0.9rem; margin-top:10px;">Scannen für Slides</p>
+                    <p class="qr-caption">Scannen für Slides</p>
                 </div>
             </div>
         </div>
@@ -424,9 +61,8 @@
                         Buttons</strong> zum Einsatz, um die Bewegung des Charakters präzise zu steuern.</p>
             </div>
             <div class="visual-panel">
-                <div class="qr-panel" style="border:none; background:transparent;">
-                    <i class="fas fa-universal-access"
-                        style="font-size: 8rem; color: var(--accent); text-shadow: 0 0 30px rgba(0, 225, 255, 0.4);"></i>
+                <div class="qr-panel no-border">
+                    <i class="fas fa-universal-access icon-large"></i>
                     <p style="margin-top:20px; text-align:center;">Unterstützung der Barrierefreiheit durch universelle
                         Eingabemethoden.</p>
                 </div>
@@ -452,8 +88,8 @@
                     Kombination aus diskreten (Tastatur/Touch) und kontinuierlichen (Sprache) Eingabemethoden.</p>
             </div>
             <div class="visual-panel">
-                <div class="qr-panel" style="border:none; background:transparent;">
-                    <i class="fas fa-microphone-lines" style="font-size: 8rem; color: var(--text-muted);"></i>
+                <div class="qr-panel no-border">
+                    <i class="fas fa-microphone-lines icon-large" style="color: var(--text-muted);"></i>
                 </div>
             </div>
         </div>
@@ -838,7 +474,7 @@ GOAL: SOLVE-MAZE-USING-VOICE-CONTROL
                 <div class="qr-panel">
                     <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=EncuestaPendiente"
                         class="qr-img" alt="Umfrage QR">
-                    <p style="color:var(--text-muted); font-size:0.9rem; margin-top:10px;">Scan to Evaluate</p>
+                    <p class="qr-caption">Scan to Evaluate</p>
                 </div>
             </div>
         </div>
@@ -857,7 +493,7 @@ GOAL: SOLVE-MAZE-USING-VOICE-CONTROL
                 <div class="qr-panel">
                     <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://lenis-jf.github.io/voice-controlled-maze/"
                         class="qr-img" alt="Spiel QR Code">
-                    <p style="color:var(--accent); margin-top:10px; font-family:'Fira Code'">Scan to Play</p>
+                    <p class="qr-caption play-caption">Scan to Play</p>
                 </div>
             </div>
         </div>
@@ -870,59 +506,9 @@ GOAL: SOLVE-MAZE-USING-VOICE-CONTROL
         </div>
     </div>
 
-    <script>
-        let currentSlide = 0;
-        const slides = document.querySelectorAll('.slide');
-        const counterCurrent = document.getElementById('current');
-        const counterTotal = document.getElementById('total');
-        const counterEl = document.querySelector('.slide-counter');
-        let hideTimer;
-
-        // Inicializar total dinámicamente
-        counterTotal.innerText = slides.length;
-
-        function showCounter() {
-            counterEl.classList.add('visible');
-            if (hideTimer) clearTimeout(hideTimer);
-            hideTimer = setTimeout(() => {
-                counterEl.classList.remove('visible');
-            }, 3000);
-        }
-
-        function showSlide(index) {
-            slides.forEach((slide, i) => {
-                slide.classList.toggle('active', i === index);
-            });
-            counterCurrent.innerText = index + 1;
-            showCounter();
-        }
-
-        function nextSlide() {
-            if (currentSlide < slides.length - 1) {
-                currentSlide++;
-                showSlide(currentSlide);
-            }
-        }
-
-        function prevSlide() {
-            if (currentSlide > 0) {
-                currentSlide--;
-                showSlide(currentSlide);
-            }
-        }
-
-        // Teclado
-        document.addEventListener('keydown', (e) => {
-            if (e.key === 'ArrowRight' || e.key === ' ') nextSlide();
-            if (e.key === 'ArrowLeft') prevSlide();
-        });
-
-        // Mostrar contador inicial
-        showCounter();
-    </script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
