-Add new presentation content

--- a/index.html
+++ b/index.html
@@ -71,6 +71,51 @@
 
         <div class="slide">
             <div class="content-panel">
+                <h1>Implementierte Technologien</h1>
+
+                <h2>Frontend: React.js</h2>
+                <p><strong>React.js</strong>: Ideal für schnelle Status-Updates und effiziente Verwaltung komplexer UI-Zustände.</p>
+
+                <h2>Styling: SCSS</h2>
+                <p><strong>SCSS</strong>: Modulares Design durch Variablen und Verschachtelung.</p>
+
+                <h2>Paket Manager: NPM</h2>
+                <p><strong>NPM</strong>: Einfache Integration externer Bibliotheken und Tools.</p>
+
+                <h2>Versionierung: Git</h2>
+                <p><strong>Git</strong>: Versionskontrolle und Nachverfolgbarkeit für Teamarbeit.</p>
+
+                <h2>Hosting: GitHub Pages</h2>
+                <p><strong>GitHub Pages</strong>: Öffentliche Verfügbarkeit im Browser ohne lokale Installation.</p>
+            </div>
+            <div class="visual-panel">
+                <ul class="tech-list">
+                    <li>
+                        <i class="fab fa-react" style="color: #61DAFB;"></i>
+                        <span>React.js Library</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-sass" style="color: #CC6699;"></i>
+                        <span>SCSS (Sass)</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-npm" style="color: #CC6699;"></i>
+                        <span>NPM</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-git" style="color: #CC6699;"></i>
+                        <span>Git</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-github" style="color: #ffffff;"></i>
+                        <span>GitHub Pages</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="content-panel">
                 <h1>Warum ist das ein gutes HMI-Projekt?</h1>
 
                 <p><strong>Natürliche Interaktion (NUI):</strong><br>
@@ -474,7 +519,7 @@ GOAL: SOLVE-MAZE-USING-VOICE-CONTROL
                 <div class="qr-panel">
                     <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=EncuestaPendiente"
                         class="qr-img" alt="Umfrage QR">
-                    <p class="qr-caption">Scan to Evaluate</p>
+                    <p class="qr-caption">Zur Umfrage</p>
                 </div>
             </div>
         </div>
@@ -493,12 +538,12 @@ GOAL: SOLVE-MAZE-USING-VOICE-CONTROL
                 <div class="qr-panel">
                     <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://lenis-jf.github.io/voice-controlled-maze/"
                         class="qr-img" alt="Spiel QR Code">
-                    <p class="qr-caption play-caption">Scan to Play</p>
+                    <p class="qr-caption play-caption">Scannen zum Spielen</p>
                 </div>
             </div>
         </div>
 
-        <div class="slide-counter">Folie <span id="current">1</span> / <span id="total">13</span></div>
+        <div class="slide-counter">Folie <span id="current">1</span> / <span id="total">14</span></div>
 
         <div class="controls">
             <button class="nav-btn" onclick="prevSlide()">← Zurück</button>
