--- a/index.html
+++ b/index.html
@@ -71,51 +71,6 @@
 
         <div class="slide">
             <div class="content-panel">
-                <h1>Implementierte Technologien</h1>
-
-                <h2>Frontend: React.js</h2>
-                <p><strong>React.js</strong>: Ideal für schnelle Status-Updates und effiziente Verwaltung komplexer UI-Zustände.</p>
-
-                <h2>Styling: SCSS</h2>
-                <p><strong>SCSS</strong>: Modulares Design durch Variablen und Verschachtelung.</p>
-
-                <h2>Paket Manager: NPM</h2>
-                <p><strong>NPM</strong>: Einfache Integration externer Bibliotheken und Tools.</p>
-
-                <h2>Versionierung: Git</h2>
-                <p><strong>Git</strong>: Versionskontrolle und Nachverfolgbarkeit für Teamarbeit.</p>
-
-                <h2>Hosting: GitHub Pages</h2>
-                <p><strong>GitHub Pages</strong>: Öffentliche Verfügbarkeit im Browser ohne lokale Installation.</p>
-            </div>
-            <div class="visual-panel">
-                <ul class="tech-list">
-                    <li>
-                        <i class="fab fa-react" style="color: #61DAFB;"></i>
-                        <span>React.js Library</span>
-                    </li>
-                    <li>
-                        <i class="fab fa-sass" style="color: #CC6699;"></i>
-                        <span>SCSS (Sass)</span>
-                    </li>
-                    <li>
-                        <i class="fab fa-npm" style="color: #CC6699;"></i>
-                        <span>NPM</span>
-                    </li>
-                    <li>
-                        <i class="fab fa-git" style="color: #CC6699;"></i>
-                        <span>Git</span>
-                    </li>
-                    <li>
-                        <i class="fab fa-github" style="color: #ffffff;"></i>
-                        <span>GitHub Pages</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="slide">
-            <div class="content-panel">
                 <h1>Warum ist das ein gutes HMI-Projekt?</h1>
 
                 <p><strong>Natürliche Interaktion (NUI):</strong><br>
@@ -133,9 +88,55 @@
                     Kombination aus diskreten (Tastatur/Touch) und kontinuierlichen (Sprache) Eingabemethoden.</p>
             </div>
             <div class="visual-panel">
-                <div class="qr-panel no-border">
-                    <i class="fas fa-microphone-lines icon-large" style="color: var(--text-muted);"></i>
+                <div class="screenshot-panel">
+                    <img src="assets/game-screenshot.png" alt="Game Screenshot" class="screenshot-img">
                 </div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="content-panel">
+                <h1>Implementierte Technologien</h1>
+
+                <h2>Frontend: React.js</h2>
+                <p>Da die Webanwendung stark von konstantem I/O und schnellen Status-Updates abhängt, haben wir uns für
+                    <strong>React.js</strong> entschieden.</p>
+
+                <h2>Styling: SCSS</h2>
+                <p>Für das Design nutzen wir <strong>SCSS</strong> für ein modulares und strukturiertes Styling.</p>
+
+                <h2>Paket Manager: NPM</h2>
+                <p><strong>NPM</strong> ermöglicht die einfache Integration externer Bibliotheken und Tools.</p>
+
+                <h2>Versionierung: Git</h2>
+                <p><strong>Git</strong> sorgt für Versionskontrolle und Nachverfolgbarkeit für Teamarbeit.</p>
+
+                <h2>Hosting: GitHub Pages</h2>
+                <p>Öffentliche Verfügbarkeit im Browser ohne lokale Installation.</p>
+            </div>
+            <div class="visual-panel">
+                <ul class="tech-list">
+                    <li>
+                        <i class="fab fa-react" style="color: #61DAFB;"></i>
+                        <span>React.js</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-sass" style="color: #CC6699;"></i>
+                        <span>SCSS</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-npm" style="color: #CB3837;"></i>
+                        <span>NPM</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-git-alt" style="color: #F05032;"></i>
+                        <span>Git</span>
+                    </li>
+                    <li>
+                        <i class="fab fa-github" style="color: #ffffff;"></i>
+                        <span>GitHub Pages</span>
+                    </li>
+                </ul>
             </div>
         </div>
 
