Update survey link and QR code in index.html

--- a/index.html
+++ b/index.html
@@ -511,14 +511,13 @@ GOAL: SOLVE-MAZE-USING-VOICE-CONTROL
                 </ol>
 
                 <p style="margin-top:20px; color:var(--accent);">Nehmen Sie an der Umfrage teil:</p>
-                <a href="#ENCUESTA_PENDIENTE" class="btn-primary"
-                    onclick="alert('Link zur Umfrage noch nicht verfügbar.'); return false;">
+                <a href="https://forms.gle/rvwf2fAKFqTZm2nk6" class="btn-primary"
                     <i class="fas fa-poll-h"></i> Zur Umfrage
                 </a>
             </div>
             <div class="visual-panel">
                 <div class="qr-panel">
-                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=EncuestaPendiente"
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://forms.gle/rvwf2fAKFqTZm2nk6"
                         class="qr-img" alt="Umfrage QR">
                     <p class="qr-caption">Zur Umfrage</p>
                 </div>
