Refactor code structure for improved readability and maintainability
added also a slides previewer for a faster navigation to future or previoous slides

--- a/index.html
+++ b/index.html
@@ -576,6 +576,21 @@ export function interpretSequence(transcript = "") {
         </div>
     </div>
 
+    <!-- Slide Navigation Menu -->
+    <div class="menu-toggle" id="menuToggle">
+        <i class="fas fa-th-large"></i>
+    </div>
+
+    <div class="slide-nav-menu" id="slideNavMenu">
+        <div class="menu-header">
+            <h3>Slides Preview</h3>
+            <button class="close-menu" id="closeMenu"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="menu-items-container" id="menuItemsContainer">
+            <!-- Items injected by JS -->
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
     <script src="script.js"></script>
