--- a/index.html
+++ b/index.html
@@ -570,10 +570,15 @@ export function interpretSequence(transcript = "") {
 
         <div class="slide-counter">Folie <span id="current">1</span> / <span id="total">14</span></div>
 
-        <div class="controls">
+        <!-- <div class="controls">
             <button class="nav-btn" onclick="prevSlide()">← Zurück</button>
             <button class="nav-btn" onclick="nextSlide()">Weiter →</button>
-        </div>
+        </div> -->
+    </div>
+
+    <div class="controls">
+        <button class="nav-btn" onclick="prevSlide()">← Zurück</button>
+        <button class="nav-btn" onclick="nextSlide()">Weiter →</button>
     </div>
 
     <!-- Slide Navigation Menu -->
