Moved div.controls to the body so they get correctly fixed on the website, and manipulated their styles on mobile devices

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voice Controlled Maze - HMI Präsentation</title>
 
+    <link rel="icon" href="./assets/logo-small.svg" type="image/x-icon">
+
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Fira+Code:wght@400;500&display=swap"
         rel="stylesheet">
