Enhance GOMS-CMN slide with additional content and styling adjustments

--- a/index.html
+++ b/index.html
@@ -144,8 +144,16 @@
         </div>
 
         <div class="slide">
-            <div class="content-panel">
+            <div class="content-panel goms">
                 <h1>GOMS-CMN Analyse</h1>
+                <strong>Warum GOMS-CMN?</strong>
+                <ul>
+                    <li>Flexibel und Verständlich</li>
+                    <li>Klare Struktur</li>
+                    <li>Strukturiert für Komplexe Aufgaben</li>
+                    <li>Vergleicht Steuerungsmethoden</li>
+                </ul>
+
                 <p>Modellierung der Benutzerinteraktion für die Aufgabe "Labyrinth lösen".</p>
 
                 <h2>Goals & Methods</h2>
