Add print-only presentation link and correct some points of the goms slide.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <p><strong>Entwickelt von:</strong><br>
                         Juan Fernando Lenis Serna<br>
                         Ayman Lahseb</p>
+                    <p class="print-only-link">
+                        <strong>Präsentation Link:</strong> <a href="https://lenis-jf.github.io/voice-maze-presentation/">https://lenis-jf.github.io/voice-maze-presentation/</a>
+                    </p>
                 </div>
             </div>
             <div class="visual-panel">
@@ -166,9 +169,9 @@
 
                 <h2>Selection Rules (Beispiel)</h2>
                 <p>
-                    <em>RULE 1:</em> Select USE-KEYBOARD-KEYS-METHOD to use keyboard keys.<br>
-                    <em>RULE 2:</em> Select USE-TOUCH-BUTTONS-METHOD to use touch controls.<br>
-                    <em>RULE 3:</em> Select USE-VOICE-CONTROL-METHOD to use voice controls.
+                    <em>RULE 1:</em> Select USE-VOICE-CONTROL-METHOD to use voice controls.
+                    <em>RULE 2:</em> Select USE-KEYBOARD-KEYS-METHOD to use keyboard keys.<br>
+                    <em>RULE 3:</em> Select USE-TOUCH-BUTTONS-METHOD to use touch controls.<br>
                 </p>
             </div>
             <div class="visual-panel">
@@ -209,9 +212,9 @@ GOAL:		USE-TOUCH-BUTTONS-METHOD
 .		.		.		GOAL:NAVIGATE-MAZE-USING-TOUCH-SCREEN
 .		.		.			PRESS-ARROW-BUTTONS-TO-NAVIGATE-USING-FINGER-ON-SCREEN
 .		.		.			REACH-THE-END.
-RULE 1: Select USE-KEYBOARD-KEYS-METHOD to use keyboard keys
-RULE 2: Select USE-TOUCH-BUTTONS-METHOD to use touch controls
-RULE 3: Select USE-VOICE-CONTROL-METHOD to use voice controls
+RULE 1: Select USE-VOICE-CONTROL-METHOD to use voice controls
+RULE 2: Select USE-KEYBOARD-KEYS-METHOD to use keyboard keys
+RULE 3: Select USE-TOUCH-BUTTONS-METHOD to use touch controls
                             </code></pre>
                 </div>
             </div>
